--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0",
-    "@openzeppelin/test-helpers": "^0.5.15",
     "ethers": "^5.6.8",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "^5.0.1",
-    "truffle": "^5.5.17"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
